--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "workbench.colorCustomizations": {
-    "titleBar.activeBackground": "#ff2600"
+    "titleBar.activeBackground": "#6f352c"
   }
 }
